<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddItemFragment1"
    android:background="@color/backgroundMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundMain">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_back"
                style="?android:borderlessButtonStyle"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:text="@string/btnBackText"
                android:textColor="@color/main"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/add_item_title"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="하루 한술"
                android:textColor="@color/main"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_date_test"
                style="?android:borderlessButtonStyle"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:text="@string/btnDateText"
                android:textColor="@color/main"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_save"
                style="?android:borderlessButtonStyle"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:text="@string/btnSaveText"
                android:textColor="@color/main"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/solid_line3"
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="@color/main"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/add_item_img_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="마신 병 수마다 사진을 선택해 주세요"
            android:textColor="@color/main"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/add_item_img_text">

            <Spinner
                android:id="@+id/count_spinner_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_image_search" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_next"
            style="?android:borderlessButtonStyle"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>