<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddItemFragment"
    android:background="@color/backgroundMain">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <EditText
                android:id="@+id/add_item_title"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:importantForAutofill="no"
                android:singleLine="true"
                android:backgroundTint="@color/main"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:hint="@string/addItemHint"
                android:inputType="text"
                 />
            <Button
                android:id="@+id/btn_save"
                style="?android:borderlessButtonStyle"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:text="@string/btnSaveText"
                android:textColor="@color/main"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundMain"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="5dp"
                android:background="#E8E8E8"
                android:src="@drawable/icon_image" />

            <ImageView
                android:id="@+id/img_2"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="5dp"
                android:background="#E8E8E8"
                android:src="@drawable/icon_image" />

            <ImageView
                android:id="@+id/img_3"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="5dp"
                android:background="#E8E8E8"
                android:src="@drawable/icon_image" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/addItemText"
            android:textColor="@color/main"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <EditText
            android:id="@+id/contents_input"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:backgroundTint="@color/main"
            android:hint="@string/contentsInputHint"
            android:importantForAutofill="no"
            android:inputType="none"
            android:singleLine="false"
            android:textCursorDrawable="@drawable/cursor_drawable"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contents_input">

            <RadioButton
                android:id="@+id/radio_btn_Private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="비공개" />

            <RadioButton
                android:id="@+id/radio_btn_friend_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="친구공개" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>