<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="AddItemViewModel"
            type="com.one_day.one_drink_a_day.viewmodel.AddItemViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    tools:context=".activity.AddItem">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back"
            style="?android:borderlessButtonStyle"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btnBackText"
            android:textColor="@color/main"
            android:textSize="16sp"
            android:textStyle="bold"
      />
        <TextView
            android:id="@+id/add_item_title"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="하루 한술"
            android:textColor="@color/main"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <Button
            android:id="@+id/btn_date"
            android:layout_width="85dp"
            android:layout_height="60dp"
            style="?android:borderlessButtonStyle"
            android:text="@string/btnDateText"
            android:textColor="@color/main"
            android:textSize="16sp"
            android:textStyle="bold"/>
         <Button
            android:id="@+id/btn_save"
            style="?android:borderlessButtonStyle"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:text="@string/btnSaveText"
            android:textColor="@color/main"
            android:textSize="16sp"
            android:textStyle="bold"
      />
    </LinearLayout>

    <View
        android:id="@+id/solid_line3"
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@color/main"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/add_item_img_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="마신 병 수마다 사진을 선택해 주세요"
        android:textColor="@color/main"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_img_text">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/count_spinner_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:background="@color/backgroundMain"
                android:scaleType="centerInside"
                android:src="@drawable/icon_image" />
        </LinearLayout>

        <View
            android:id="@+id/solid_line2"
            android:layout_width="1.0dp"
            android:layout_height="match_parent"
            android:background="@color/main" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="vertical">


            <Spinner
                android:id="@+id/count_spinner_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <ImageView
                android:id="@+id/img_2"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:background="@color/backgroundMain"
                android:scaleType="centerInside"
                android:src="@drawable/icon_image" />
        </LinearLayout>
    </LinearLayout>


    <View
        android:id="@+id/solid_line4"
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@color/main"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="25dp"
            >
            <Spinner
                android:id="@+id/count_spinner_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />
            <ImageView
                android:id="@+id/img_3"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:background="@color/backgroundMain"
                android:scaleType="centerInside"
                android:src="@drawable/icon_image"
                />
        </LinearLayout>
        <View
            android:id="@+id/solid_line5"
            android:layout_width="1.0dp"
            android:layout_height="match_parent"
            android:background="@color/main"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/count_spinner_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />
            <ImageView
                android:id="@+id/img_4"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:background="@color/backgroundMain"
                android:scaleType="centerInside"
                android:src="@drawable/icon_image"
                />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/contents_input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:backgroundTint="@color/main"
        android:hint="제목을 입력해주세요"
        android:inputType="none"
        android:maxLength="10"
        android:scrollHorizontally="false"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_btn_Private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="비공개" />

        <RadioButton
            android:id="@+id/radio_btn_friend_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="친구공개" />

    </RadioGroup>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>